[package]
name = "rss-telex"
version = "0.1.0"
edition = "2021"
authors = ["lucashorward"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1", features = ["derive"]}
clap = { version = "4.0.26", features = ["derive"] }
serde-xml-rs = "0.6.0"
